# clang-matching-example

./: .gitignore  CMakeLists.txt  LoopConvert.cpp  README.md
tests/assets/: floatloop.cpp  intloop.cpp  noliteral.cpp
